2011-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup_visuals.php
	godmode/users/configure_user.php: Fixed some mistakes of my last 
	commit.

2011-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_users.php
	include/functions_events.php
	include/functions_html.php
	include/functions_menu.php
	include/styles/pandora.css
	include/graphs/functions_pchart.php
	include/functions_messages.php
	include/functions_exportserver.php
	include/functions_modules.php
	include/functions_reporting.php
	include/functions_filemanager.php
	include/functions_groups.php
	include/functions_gis.php
	include/functions_networkmap.php
	include/functions_servers.php
	include/functions_network_components.php
	include/functions_visual_map.php
	include/ajax/skins.ajax.php
	include/ajax/visual_console_builder.ajax.php
	include/help/en/help_gis_map_builder.php
	include/help/en/help_agent_status.php
	include/help/en/help_eventview.php
	include/help/en/help_configure_gis_map.php
	include/help/en/help_cascade_protection.php
	include/help/en/help_setup_gis_index.php
	include/help/es/help_gis_map_builder.php
	include/help/es/help_agent_status.php
	include/help/es/help_eventview.php
	include/help/es/help_configure_gis_map.php
	include/help/es/help_cascade_protection.php
	include/help/ja/help_gis_map_builder.php
	include/help/ja/help_agent_status.php
	include/help/ja/help_eventview.php
	include/help/ja/help_configure_gis_map.php
	include/help/ja/help_cascade_protection.php
	include/help/ja/help_setup_gis_index.php
	include/functions_ui.php
	include/functions_incidents.php
	include/functions.php
	include/functions_agents.php
	include/functions_db.php
	include/functions_fsgraph.php
	include/functions_extensions.php
	include/functions_ui_renders.php
	extensions/insert_data.php
	extensions/system_info.php
	extensions/extension_uploader.php
	extensions/agents_modules.php
	extensions/dbmanager.php